--- a/src/main/resources/templates/Record/editRecord.html
+++ b/src/main/resources/templates/Record/editRecord.html
@@ -60,7 +60,8 @@
                                     <h4 class="modal-title">Удаление записи</h4>
                                 </div>
                                 <div class="modal-body">Вы уверены, что хотите удалить запись?</div>
-                                <form th:method="DELETE" th:action="@{/records/user/{userId}/line/{lineId} (userId = ${line.userId},lineId = ${line.lineId})}">
+                                <form th:method="DELETE"
+                                      th:action="@{/records/user/{userId}/line/{lineId} (userId = ${line.userId},lineId = ${line.lineId})}">
                                     <div class="modal-footer">
                                         <button class="btn btn-success" data-dismiss="modal">Отмена</button>
                                         <button class="btn btn-danger" type="submit">Удалить</button>
@@ -90,135 +91,143 @@
 
 
 <br>
-<div class = "container">
-<form th:method="PATCH" th:action="@{/record/{lineId} (lineId=${line.lineId})}" th:object="${line}">
-    <div class="container-sm">
-        <table class="table table-bordered table-hover">
-            <thead>
-            <th class="warning" colspan=2>
-                <i>Редактирование одиночной записи</i>
-            </th>
-            </thead>
-            <tbody class="table-group-divider">
-            <tr>
-                <td>Id записи</td>
-                <td>
-                    <!--                    <label for="userId"></label>-->
-                    <input type="text" th:field="*{lineId}" id="lineId" disabled="true">
-                </td>
-            </tr>
-            <tr>
-                <td>Id мастера</td>
-                <td>
-                    <!--                    <label for="userName"></label>-->
-                    <input type="text" th:field="*{userId}" id="userId">
-                    <div style="color:red" th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}">userId
-                        Errors
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>Дата</td>
-                <td>
-                    <label for="date"></label>
-                    <input type="text" th:field="*{date}" id="date">
-                    <div style="color:red" th:if="${#fields.hasErrors('date')}" th:errors="*{date}">
-                        date Errors
-                    </div>
-                </td>
-
-            </tr>
-            <tr>
-                <td>Время</td>
-                <td>
-                    <label for="time"></label>
-                    <input type="text" th:field="*{time}" id="time">
-                    <div style="color:red" th:if="${#fields.hasErrors('time')}"
-                         th:errors="*{time}">
-                        time Errors
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>Имя клиента</td>
-                <td>
-                    <label for="clientName"></label>
-                    <input type="text" th:field="*{clientName}" id="clientName">
-                    <div style="color:red" th:if="${#fields.hasErrors('clientName')}" th:errors="*{clientName}">
-                        clientName
-                        Errors
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>Название процедуры</td>
-                <td>
-                    <label for="procedureName"></label>
-                    <input type="text" th:field="*{procedureName}" id="procedureName">
-                    <div style="color:red" th:if="${#fields.hasErrors('procedureName')}" th:errors="*{procedureName}">procedureName
-                        Errors
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>Стоимость процедуры</td>
-                <td>
-                    <label for="procedureCost"></label>
-                    <input type="text" th:field="*{procedureCost}" id="procedureCost">
-                    <div style="color:red" th:if="${#fields.hasErrors('procedureCost')}" th:errors="*{procedureCost}">
-                        procedureCost
-                        Errors
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>Скидка</td>
-                <td>
-                    <label for="procedureDiscount"></label>
-                    <input type="text" th:field="*{procedureDiscount}" id="procedureDiscount">
-                    <div style="color:red" th:if="${#fields.hasErrors('procedureDiscount')}" th:errors="*{procedureDiscount}">procedureDiscount
-                        Errors
-                    </div>
-                </td>
-            </tr>
-            <tr>
-            <tr>
-                <td>Комментарий к записи</td>
-                <td>
-                    <label for="comment"></label>
-                    <input type="text" th:field="*{comment}" id="comment">
-                    <div style="color:red" th:if="${#fields.hasErrors('comment')}" th:errors="*{comment}">comment
-                        Errors
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-
-        </table>
-        <div>
-            <input class="btn btn-success button-md btn-block" value="Сохранить изменения" data-toggle="modal" data-target="#myModalAccept">
-        <div id="myModalAccept" class="modal fade" tabindex="-1">
-            <div class="modal-dialog modal-sm">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button class="close" data-dismiss="modal">х</button>
-                        <h4 class="modal-title">Подтвердите изменения</h4>
-                    </div>
-                    <div class="modal-body">Сохранить изменения?</div>
-                    <form th:method="PATCH" th:action="@{/records/{lineId} (lineId=${line.lineId})}" th:object="${line}">
-                        <div class="modal-footer">
-                            <button class="btn btn-danger" data-dismiss="modal">Отмена</button>
-                            <button class="btn btn-success" type="submit">Сохранить</button>
+<div class="container">
+    <form th:method="PATCH"
+          th:action="@{/records/user/{userId}/{lineId} (userId=${line.userId}, lineId=${line.lineId})}"
+          th:object="${line}">
+        <div class="container-sm">
+            <table class="table table-bordered">
+                <thead>
+                <th class="warning" colspan=2>
+                    <i>Редактирование одиночной записи</i>
+                </th>
+                </thead>
+                <tbody class="table-group-divider">
+                <tr>
+                    <td>Id записи</td>
+                    <td>
+                        <!--                    <label for="userId"></label>-->
+                        <input type="text" th:field="*{lineId}" id="lineId" disabled="true" style="border: 0px; box-shadow: none;">
+                    </td>
+                </tr>
+                <tr>
+                    <td>Id мастера</td>
+                    <td>
+                        <!--                    <label for="userName"></label>-->
+                        <input type="text" th:field="*{userId}" id="userId" style="border: 0px; box-shadow: none;">
+                        <div style="color:red" th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}">userId
+                            Errors
                         </div>
-                    </form>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Дата</td>
+                    <td>
+                        <label for="date"></label>
+                        <input type="text" th:field="*{date}" id="date" style="border: 0px; box-shadow: none;">
+                        <div style="color:red" th:if="${#fields.hasErrors('date')}" th:errors="*{date}">
+                            date Errors
+                        </div>
+                    </td>
+
+                </tr>
+                <tr>
+                    <td>Время</td>
+                    <td>
+                        <label for="time"></label>
+                        <input type="text" th:field="*{time}" id="time" style="border: 0px; box-shadow: none;">
+                        <div style="color:red" th:if="${#fields.hasErrors('time')}"
+                             th:errors="*{time}">
+                            time Errors
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Имя клиента</td>
+                    <td>
+                        <label for="clientName"></label>
+                        <input type="text" th:field="*{clientName}" id="clientName" style="border: 0px; box-shadow: none;">
+                        <div style="color:red" th:if="${#fields.hasErrors('clientName')}" th:errors="*{clientName}">
+                            clientName
+                            Errors
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Название процедуры</td>
+                    <td>
+                        <label for="procedureName"></label>
+                        <input type="text" th:field="*{procedureName}" id="procedureName" style="border: 0px; box-shadow: none;">
+                        <div style="color:red" th:if="${#fields.hasErrors('procedureName')}"
+                             th:errors="*{procedureName}">procedureName
+                            Errors
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Стоимость процедуры</td>
+                    <td>
+                        <label for="procedureCost"></label>
+                        <input type="text" th:field="*{procedureCost}" id="procedureCost" style="border: 0px; box-shadow: none;">
+                        <div style="color:red" th:if="${#fields.hasErrors('procedureCost')}"
+                             th:errors="*{procedureCost}">
+                            procedureCost
+                            Errors
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Скидка</td>
+                    <td>
+                        <label for="procedureDiscount"></label>
+                        <input type="text" th:field="*{procedureDiscount}" id="procedureDiscount" style="border: 0px; box-shadow: none;">
+                        <div style="color:red" th:if="${#fields.hasErrors('procedureDiscount')}"
+                             th:errors="*{procedureDiscount}">procedureDiscount
+                            Errors
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                <tr>
+                    <td>Комментарий к записи</td>
+                    <td>
+                        <label for="comment"></label>
+                        <input type="text" th:field="*{comment}" id="comment" style="border: 0px; box-shadow: none;">
+                        <div style="color:red" th:if="${#fields.hasErrors('comment')}" th:errors="*{comment}">comment
+                            Errors
+                        </div>
+                    </td>
+                </tr>
+                </tbody>
+
+            </table>
+            <div>
+                <input class="btn btn-success button-md btn-block" value="Сохранить изменения" data-toggle="modal"
+                       data-target="#myModalAccept">
+                <div id="myModalAccept" class="modal fade" tabindex="-1">
+                    <div class="modal-dialog modal-sm">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button class="close" data-dismiss="modal">х</button>
+                                <h4 class="modal-title">Подтвердите изменения</h4>
+                            </div>
+                            <div class="modal-body">Сохранить изменения?</div>
+                            <form th:method="PATCH"
+                                  th:action="@{/records/user/{userId}/{lineId} (userId=${line.userId}, lineId=${line.lineId})}"
+                                  th:object="${line}">
+                                <div class="modal-footer">
+                                    <button class="btn btn-danger" data-dismiss="modal">Отмена</button>
+                                    <button class="btn btn-success" type="submit">Сохранить</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
+
+
             </div>
         </div>
-
-
-        </div>
-    </div>
-</form>
+    </form>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
