--- a/src/main/resources/templates/User/editUser.html
+++ b/src/main/resources/templates/User/editUser.html
@@ -141,22 +141,28 @@
                 <td>Компания</td>
                 <td>
                     <div>
-                        <label for="input"></label>
-                        <input type="text" name="input" id="input" th:field="*{userCompany}" class="form-control">
-                        <div style="color:red" th:if="${#fields.hasErrors('userCompany')}" th:errors="*{userCompany}">
-                            userCompany Errors
-                        </div>
-                        <select name="category" id="category">
-                            <div>
-                                <option value="">Выберите компанию:</option>
-                                <div th:each="company: ${allCompanies}">
-                                    <option th:text="${company.getCompanyName()}"
-                                            th:value="${company.getCompanyName()}">
-                                        Company
-                                    </option>
-                                </div>
-                            </div>
+<!--                        <label for="input"></label>-->
+<!--                        <input type="text" name="input" id="input" th:field="*{userCompany}" class="form-control">-->
+<!--                        <div style="color:red" th:if="${#fields.hasErrors('userCompany')}" th:errors="*{userCompany}">-->
+<!--                            userCompany Errors-->
+<!--                        </div>-->
+                        <select class="form-control" id = dropdownCompanyList th:field="*{userCompany}" >
+                            <option th:each="company : ${allCompanies}" th:value="${company.companyId}" th:text="${company.companyName}"></option>
                         </select>
+
+<!--                        <select name="category" id="category">-->
+<!--                            <div>-->
+<!--                               -->
+<!--                                -->
+<!--                                <option value="">Выберите компанию:</option>-->
+<!--                                <div th:each="company: ${allCompanies}">-->
+<!--                                    <option th:text="${company.getCompanyName()}"-->
+<!--                                            th:value="${company.getCompanyName()}">-->
+<!--                                        Company-->
+<!--                                    </option>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </select>-->
                     </div>
                 </td>
 
@@ -264,17 +270,17 @@
         </div>
     </div>
 </form>
-<script>
-    let form = document.forms[1], // Любая ссылка на форму
-        select = form.category,
-        input = form.input;
+<!--<script>-->
+<!--    let form = document.forms[1], // Любая ссылка на форму-->
+<!--        select = form.category,-->
+<!--        input = form.input;-->
 
-    select.onchange = select_change;
+<!--    select.onchange = select_change;-->
 
-    function select_change() {
-        input.value = this.value;
-    }
-</script>
+<!--    function select_change() {-->
+<!--        input.value = this.value;-->
+<!--    }-->
+<!--</script>-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
