--- a/src/main/resources/templates/User/newUser.html
+++ b/src/main/resources/templates/User/newUser.html
@@ -13,7 +13,7 @@
 <body>
 
 <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
 
             <button type="button" class="navbar-toggle" data-toggle="collapse"
