--- a/src/main/resources/templates/User/singleUser.html
+++ b/src/main/resources/templates/User/singleUser.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
