--- a/src/main/resources/templates/User/newUser.html
+++ b/src/main/resources/templates/User/newUser.html
@@ -13,7 +13,7 @@
 <body>
 
 <nav class="navbar navbar-default" role="navigation">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
 
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -60,7 +60,7 @@
 
 <br>
 <form th:method="POST" th:action="@{/users/new}" th:object="${user}">
-    <div class="container-sm">
+    <div class="container">
         <table class="table table-bordered table-hover">
             <thead>
             <th class="warning" colspan=2>
