--- a/src/main/resources/templates/User/singleUser.html
+++ b/src/main/resources/templates/User/singleUser.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <nav class="navbar navbar-default" role="navigation">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
@@ -89,7 +89,7 @@
 
 
 <br>
-<div class="container-sm">
+<div class="container">
     <table class="table table-bordered table-hover">
         <thead>
         <th class="success" colspan=2>
